improved chapter Error

--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -243,6 +243,19 @@
   timestamp = {2012.08.03}
 }
 
+@TECHREPORT{BOYER09,
+  author = {T.~P.~Boyer and J.~I.~Antonov and O.~K.~Baranova and H.~E.~Garcia
+	and D.~R.~Johnson and R.~A.~Locarnini and A.~V.~Mishonov and T.~D.~O'Brien
+	and D.~Seidov and I.~V.~Smolyar and M.~M.~Zweng},
+  title = {{World Ocean Database 2009, Chapter 1: Introduction}},
+  institution = {U.S. Government Printing Office},
+  year = {2009},
+  address = {{Washington, D.C.}},
+  note = {216 pp.},
+  owner = {charles},
+  timestamp = {2010.01.21}
+}
+
 @ARTICLE{BRANKART98,
   author = {Brankart, J.-M. and P. Brasseur},
   title = {The general circulation in the {M}editerranean {S}ea: a climatological
@@ -444,6 +457,21 @@
   doi = {10.1016/S0967-0637(00)00060-1},
   owner = {charles},
   timestamp = {2010.11.11}
+}
+
+@ARTICLE{HARTMAN08,
+  author = {Linda Hartman and Ola H\"{o}ssjer},
+  title = {{Fast kriging of large data sets with Gaussian Markov random fields}},
+  journal = csda,
+  year = {2008},
+  volume = {52},
+  pages = {2331-2349},
+  number = {5},
+  doi = {10.1016/j.csda.2007.09.018},
+  issn = {0167-9473},
+  keywords = {Spatial interpolation},
+  owner = {charles},
+  timestamp = {2011.09.29}
 }
 
 @ARTICLE{KAPLAN00,
@@ -760,5 +788,18 @@
   owner = {charles},
   timestamp = {2012.09.07},
   url = {http://www.agu.org/journals/jc/jc1209/2012JC007936/}
+}
+
+@ARTICLE{ZHANG10,
+  author = {Zhang, H. and Wang, Y.},
+  title = {Kriging and cross-validation for massive spatial data},
+  journal = {Environmetrics},
+  year = {2010},
+  volume = {21},
+  pages = {290-304},
+  number = {3-4},
+  doi = {10.1002/env.1023},
+  owner = {charles},
+  timestamp = {2011.09.29}
 }
 
